Remove animation titles

--- a/src/views/layout/footer.pug
+++ b/src/views/layout/footer.pug
@@ -55,6 +55,6 @@ footer.footer.pt-lg
                         |    Trabaja con nosotros Work us
         .row 
             span.footer__copy.text-center.py-md &copy; All Rights Reserved By 
-                    a(href="https://wilsonweb.netlify.app/") Wilson Muñoz 
+                    a(href="https://wilsonmunoz.com/") Wilson Muñoz 
         .scrollTop &uarr;
 
