--- a/src/views/layout/galeria.pug
+++ b/src/views/layout/galeria.pug
@@ -1,6 +1,6 @@
 section.galeria#galeria.bg.py-lg 
     .container
-        h1.title-section.text-center.py-md(data-aos="zoom-in" data-aos-duration='2000')  Nuestra Galería
+        h1.title-section.text-center.py-md  Nuestra Galería
         ul.grid.pb-md 
             li.grid__item.img1(data-aos="zoom-in" data-aos-duration='1500')
                 picture 
