--- a/src/views/layout/garantia.pug
+++ b/src/views/layout/garantia.pug
@@ -1,6 +1,6 @@
 section.garantia.py-lg.bg 
     .container 
-        h2.title-section.text-center.pb-md(data-aos="zoom-in" data-aos-duration='2000')  Trasplante capilar con garantía
+        h2.title-section.text-center.pb-md Trasplante capilar con garantía
         .row
             .col-md-4
                 .card.mt-md(data-aos="flip-left" data-aos-duration='1500')  
