--- a/src/views/layout/medicos.pug
+++ b/src/views/layout/medicos.pug
@@ -1,8 +1,8 @@
 section.medicos#medicos.py-lg 
     .container
         .medicos-title.text-center.py-md
-            h2.title-section(data-aos="zoom-in" data-aos-duration='2000')  Nuestros Médicos Cualificados 
-            p.paragraph(data-aos="zoom-in" data-aos-duration='2500')  There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour
+            h2.title-section  Nuestros Médicos Cualificados 
+            p.paragraph There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour
         .row.pb-md 
             .col-md-4.pb-lg(data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration='3500') 
                 picture.picture-medical.picture
