--- a/src/views/layout/conocenos.pug
+++ b/src/views/layout/conocenos.pug
@@ -7,18 +7,18 @@ section.conocenos#conocenos.py-lg
                     img(src='images/02-doctora.png' alt='Doctor').picture__img
             .col-12.col-md-6.pb-lg 
                 .content-text.flow 
-                    h2.title-section(data-aos="zoom-in" data-aos-duration='2000')   Somos expertos en  trasplante  capilar y medicina estética            
-                    p.paragraph(data-aos="zoom-in" data-aos-duration='2500') There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour
-                    p.paragraph(data-aos="zoom-in" data-aos-duration='3000') There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+                    h2.title-section(data-aos="fade-up" )   Somos expertos en  trasplante  capilar y medicina estética            
+                    p.paragraph(data-aos="fade-up") There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour
+                    p.paragraph(data-aos="fade-up") There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
                     button.btn.btn-primary Más Información
         .row.conocenos-section 
             .col-12.col-md-6.pb-lg
                 .content-text.flow 
-                    h2.title-section(data-aos="zoom-in" data-aos-duration='2000')    La Clínica
-                    p.paragraph(data-aos="zoom-in" data-aos-duration='2500') There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour
-                    p.paragraph(data-aos="zoom-in" data-aos-duration='3000') There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+                    h2.title-section(data-aos="fade-up" )    La Clínica
+                    p.paragraph(data-aos="fade-up") There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour
+                    p.paragraph(data-aos="fade-up") There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
                     button.btn.btn-primary Más Información
-            .col-12.col-md-6(data-aos="fade-up" data-aos-duration='2500')
+            .col-12.col-md-6(data-aos="fade-up")
                 picture.picture
                     source(srcset='images/02-clinica@2x.png' media='(min-width: 768px)').picture__img 
                     img(src='images/02-clinica.png' alt='Doctor').picture__img
